[gd_scene load_steps=4 format=2]

[ext_resource path="res://Enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/dummymale.tscn" type="PackedScene" id=2]

[sub_resource type="SphereShape" id=1]
radius = 10.0

[node name="Enemy" type="Spatial"]
script = ExtResource( 1 )

[node name="dummymale" parent="." instance=ExtResource( 2 )]

[node name="RayCast" type="RayCast" parent="."]
cast_to = Vector3( 0, 0, -10 )

[node name="Sight" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Sight"]
shape = SubResource( 1 )

[node name="Eyes" type="Spatial" parent="."]

[node name="ShootTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Sight" to="." method="_on_Sight_body_entered"]
[connection signal="body_exited" from="Sight" to="." method="_on_Sight_body_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
